# MiniBots

./: .env  README.md  dinner.py  keyrate_ru.py  percent_bank.py  ping.py  pyproject.toml  requerements.txt
dinner/: pyproject.toml
keyrate_ru/: pyproject.toml
scripts/: dinner.py  percent_bank.py
