[project]
name = "minibots"
version = "1.3.0"
authors = [
    {name = "ornaras"}
]
requires-python = ">=3.9"
dependencies = [
    "requests (>=2.32.5,<3.0.0)",
    "beautifulsoup4 (>=4.14.2,<5.0.0)",
    "tcppinglib (>=2.0.4,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
