[project]
name = "minibots"
version = "1.3.1"
authors = [
    {name = "ornaras"}
]
requires-python = ">=3.9"
dependencies = [
    "requests (==2.32.5)",
    "beautifulsoup4 (==4.14.2)",
    "tcppinglib (==2.0.4)",
    "python-dotenv (==1.1.1)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
